Sửa FE+ thêm Database

--- a/style/Danhgia.css
+++ b/style/Danhgia.css
@@ -4,7 +4,27 @@
 } */
 
 body {
-  font-family: sans-serif;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+/* Sidebar cột bên trái */
+.sidebar {
+  width: 250px;
+  background-color: #00bcd4;
+  height: 100vh;
+  position: fixed;
+  padding-top: 20px;
+  color: white;
+  left: 0; /* Đảm bảo sidebar luôn nằm bên trái */
+  top: 0;
+}
+
+.container {
+  max-width: calc(100% - 250px);
+  margin-left: 250px;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .container h2 {
