--- a/style/Dashboard.css
+++ b/style/Dashboard.css
@@ -12,26 +12,17 @@
   padding: 10px 20px;
   color: white;
 }
-/* Tìm kiếm */
-.header .search-container {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-}
-.header input[type="text"] {
-  padding: 5px;
-  border: none;
-  border-radius: 3px;
-  width: 300px;
-}
+
 /* Thanh header */
 .header .icons {
   display: flex;
+  margin-left: auto;
   align-items: center;
 }
-/* các icon thanh header */
+
+/* Các icon thanh header */
 .header .icons i {
-  margin-left: 20px;
+  margin-left: 30px;
   font-size: 20px;
 }
 
@@ -49,10 +40,10 @@
 /* Class chung cho ô thống kê vàng */
 .cards {
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
   margin-top: 20px;
 }
+
 /* Class cho từng ô thống kê vàng */
 .card {
   background-color: #ffcc80;
