--- a/style/chitietdiadiem.css
+++ b/style/chitietdiadiem.css
@@ -1,14 +1,28 @@
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
-  padding: 20px;
-  background-color: #f4f7f6;
+  font-family: Arial, sans-serif;
 }
 
-h2 {
-  text-align: center;
-  color: #2c3e50;
-  margin-bottom: 20px;
+/* Sidebar cột bên trái */
+.sidebar {
+  width: 250px;
+  background-color: #00bcd4;
+  height: 100vh;
+  position: fixed;
+  padding-top: 20px;
+  color: white;
+  left: 0; /* Đảm bảo sidebar luôn nằm bên trái */
+  top: 0;
+}
+
+/* Container chính (nội dung chính bên phải) */
+.container {
+  max-width: calc(
+    100% - 250px
+  ); /* Tự động điều chỉnh kích thước container dựa trên chiều rộng của sidebar */
+  margin-left: 250px; /* Đẩy container sang bên phải để không bị che bởi sidebar */
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 table {
