--- a/style/report.css
+++ b/style/report.css
@@ -2,11 +2,29 @@
   float: right;
 }
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
+  font-family: Arial, sans-serif;
 }
+
+/* Sidebar cột bên trái */
+.sidebar {
+  width: 250px;
+  background-color: #00bcd4;
+  height: 100vh;
+  position: fixed;
+  padding-top: 20px;
+  color: white;
+  left: 0; /* Đảm bảo sidebar luôn nằm bên trái */
+  top: 0;
+}
+
+.container {
+  max-width: calc(100% - 250px);
+  margin-left: 250px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
 .container {
   width: 80%;
   margin: 20px auto;
