--- a/style/navbar.css
+++ b/style/navbar.css
@@ -1,6 +1,5 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -9,7 +8,7 @@ body {
 
 /* Navbar */
 .navbar {
-    background-color: #3DE8FF;
+    background-color: #4de275;
     text-align: center;
     padding: 10px 0;
 }
@@ -26,6 +25,7 @@ body {
 .nav-logo {
     font-size: 24px;
     color: #fff;
+    margin-right:20px;
 }
 
 /* các thành phần thanh tìm kiếm */
@@ -61,10 +61,9 @@ body {
 .user-container button {
     margin-left: 5px;
     border: none;
-    background-color: #3DE8FF;
+    background-color: white;
     font-size: medium;
     padding: 8px 12px;
-    color: #fff;
     cursor: pointer;
 }
 
@@ -101,3 +100,59 @@ body {
         top: -13px;
     }
 }
+
+
+
+/* Nút tối sáng */
+.switch {
+    margin:10px;
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 47px;
+    height: 20px;
+   }
+   
+   /* Hide default HTML checkbox */
+.switch input {
+    opacity: 1;
+    width: 0;
+    height: 0;
+   }
+   
+   /* The slider */
+   .slider-navbar {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    background: #fff;
+    transition: .4s;
+    border-radius: 30px;
+    border: 1px solid #ccc;
+   }
+   
+   .slider-navbar:before {
+    position: absolute;
+    content: "";
+    height: 1em;
+    width: 1em;
+    border-radius: 16px;
+    left: 1.2px;
+    top: 0;
+    bottom: 0;
+    background-color: white;
+    box-shadow: 0 2px 5px #999999;
+    transition: .4s;
+   }
+   
+   input:checked + .slider-navbar {
+    background-color: #494b49;
+    border: 1px solid transparent;
+   }
+   
+   input:checked + .slider-navbar:before {
+    transform: translateX(1.5em);
+   }
